Integrates Schoenhage Strassen multiplier from https://github.com/robbymckilliam/bigint